# freespeak

./: .gitignore  AUTHORS  ChangeLog  Guidelines  INSTALL  MAINTAINERS  MANIFEST.in  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  freespeak.desktop  freespeak.py  setup.py
data/: Freespeak_Applet.server.in.in  Makefile.am  freespeak.desktop.in  freespeak.desktop.in.in  freespeak.schemas.in
data/art/: Makefile.am
docs/: Makefile.am
docs/man/: freespeak.1
freespeak/: Makefile.am  about.py  application.py  config.py  defs.py.in  freespeak.py  globalkeybinding.py  settings.py  status.py  translation.py  translator.py  translators_manager.py  utils.py
freespeak/applet/: Makefile.am  main_widget.py  menus.py
freespeak/modules/: __init__.py  altavista.py  freetranslation.py  google.py
freespeak/src/: about.py  config.py  nls.py  progress.py  settings.py  translation.py  tray.py  utils.py
freespeak/src/translation/: __init__.py  base.py  mini.py  normal.py  text.py  web.py
freespeak/translation/: __init__.py  frame.py  mini.py  text.py  web.py
freespeak/translators/: Makefile.am  altavista.py  babylon.py  freetranslation.py  google.py  opentran.py  yahoo.py
freespeak/ui/: Makefile.am  about.py  exception_dialog.py  globalkeybinding.py  intro.py  main_window.py  manager.py  settings.py  spinner.py  status_icon.py  style.py  suggestion.py  translation.py  translation_box.py  translation_label.py  utils.py
help/: ChangeLog  Makefile.am  freespeak.omf.in
help/C/: freespeak.xml
lang/: en.po  it.po  nl.po
modules/: altavista.py
po/: ChangeLog  POTFILES.in  en.po  fr.po  it.po  nl.po  sv.po
trayicon/: trayicon.c
