freespeak_uidir = $(pythondir)/freespeak/ui
freespeak_ui_PYTHON =		\
	__init__.py		\
	about.py		\
	globalkeybinding.py	\
	exception_dialog.py	\
	intro.py		\
	main_window.py		\
	manager.py		\
	settings.py		\
	spinner.py		\
	style.py		\
	suggestion.py		\
	translation_box.py	\
	translation_label.py	\
	translation.py		\
	utils.py